--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -1,9 +1,14 @@
 /*==================================================
 =                  Index - Page                    =
 ==================================================*/
+a { color: inherit; } 
 body {
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
+}
+.nav > li > a:hover,
+.nav > li > a:focus {
+background-color: transparent;
 }
 .navbar-custom {
     background-color: #f7b692;
@@ -93,6 +98,7 @@ span#releaseNum {
     border-bottom: solid 2px;
     margin-bottom: 50px;
     font-size: 15px;
+    display: inline;
 }
 
 /* ============================= */
@@ -175,6 +181,11 @@ a:hover {
     position: absolute;
     bottom: 30px;
 } 
+.fullw-custom {
+    background-color: #f7b692;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
 .fullw-blue {
     background-color: #00577D;
     padding-top: 60px;
@@ -204,7 +215,7 @@ h2#title {
     font-size: 60px;
     line-height: 54px;
     color: #364962;
-    margin-top: 20px;
+    margin-top: 50px;
     margin-bottom: 20px; 
 }
 #content {
@@ -644,7 +655,7 @@ h2#catHeader {
 ==================================================*/
 
 .fullw-blue-z1 {
-    background-color: #F7B692;
+    background-color: #00577D;
     position: absolute;
     left: 0px;
     top: 0px;
@@ -657,7 +668,7 @@ h2#catHeader {
 }
 .art-img-wrapper {
     min-height: 600px;
-    background-image: url(../img/animation-03.gif);
+    background-image: url(../img/06.jpg);
     background-size: cover;
     background-position: center center;
 }
@@ -682,6 +693,11 @@ h2#catHeader {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.addon-img img {
+    width: 100%;
+}
+
 
 
 
